prevented the website to be on mobile

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -3,7 +3,7 @@ button:active{
 }
 button {
   width: auto;
-  padding: 1rem;
+  padding: 1rem 1.2rem;
   cursor: pointer;
   border-radius: 5px;
   border: none;
